anki-card-template/card.css
/* ... */
.night_mode #card #back #tags .tag .inner { color: black; }
#card #back #tags .tag {
	--tag-hue: 0;
	padding: 4px;
	border-radius: 999px;
	margin: 0;
	transition-property: padding, grid-template-rows, grid-template-columns;
	transition-duration: var(--tag-transition);
	overflow: hidden;
	display: grid;
	grid-template-rows: 0fr;
	grid-template-columns: 0fr;
	justify-content: center;
	align-items: center;
	align-content: center;
}
#card #back #tags .tag .inner {
	position: relative;
	opacity: 0;
	transition-duration: var(--tag-transition);
	transition-property: opacity, padding;
	white-space: nowrap;
	min-height: 0;
	min-width: 0;
	display: flex;
	justify-content: center;
	cursor: default;
}

/* tag hover/hold expand */
#card #back #tags:active,
#card #back #tags:hover { opacity: 1; }
#card #back #tags:active .tag .inner,
#card #back #tags:hover .tag .inner { opacity: 1; }
#card #back #tags:active .tag,
#card #back #tags:hover .tag {
	grid-template-rows: 1fr;
	grid-template-columns: 1fr;
	padding: 4px 12px;
}

/* display tags vertically on mobile */
.mobile #card.vertical-layout #back #tags { flex-direction: column; }
.mobile #card.vertical-layout #back #tags .tag { max-width: max-content; }

/* make sure to hide empty fields */
.parse.empty { display: none !important; }

/* don't break syllables in the reading field */
#card #back #target-word-reading .kanji .writing,
#card #back #target-word-reading .reading .syllable { white-space: nowrap; }

/* subtile style */
.subtile {
	font-style: italic;
	opacity: var(--subtile-opacity);
	font-size: var(--subtile-font-size);
	vertical-align: baseline;
}
.subtile .script-japanese { font-style: normal; } /* italic japanese looks weird */

/* word note style */
#card #target-word-reading .kanji { position: relative; }
#card #target-word-reading .note {
	line-height: 0;
	margin: 0;
	margin-top: 1em;
	margin-right: 0.25em;
}
.mobile #card.vertical-layout #target-word-reading .note {
	margin: 0;
	margin-bottom: 0.5em;
}

/* definitions */
#card #target-word-translation .definitions {
	display: inline;
	padding: 0;
}
#card #target-word-translation .definitions .definition,
#card #target-word-translation .definitions .definition-separator {
	list-style: none;
	display: inline;
}

#card #target-word-translation .definitions .definition-separator::after { content: ", "; }

/* mobile definitions style */
.mobile #card.vertical-layout #target-word-translation .definitions {
	display: flex;
	flex-direction: column;
	align-items: center;
}
.mobile #card.vertical-layout #target-word-translation .definitions .definition-separator::after { content: ""; }
.mobile #card.vertical-layout #target-word-translation .definitions .definition-separator {
	height: var(--definition-marker-height);
	width: var(--definition-marker-width);
	opacity: var(--definition-marker-opacity);
	border-radius: 999px;
	background-color: currentColor;
	margin: var(--definition-spacing) 0;
}

/* indicator (word type + defaults) */
.indicator {
	position: relative;
	display: inline-block;
	margin: 0.25em;
	border: var(--indicator-stroke-weight) solid transparent;
}
.indicator::after {
	content: "";
	position: absolute;
	inset: calc(-1 * var(--indicator-stroke-weight));
	border-radius: 4px;
	border: var(--indicator-stroke-weight) solid currentColor;
	z-index: -1;
}
.indicator .script-japanese { font-size: 90%; }
.indicator .content,
.indicator .stamp { display: inline-block; }
.indicator .content { margin: 1px 4px; }
.indicator .stamp {
	position: relative;
	padding: 2px 4px;
	margin: 1px;
	font-weight: bold;
	font-size: 90%;
	height: 100%;
}
.indicator .stamp::before {
	content: "";
	position: absolute;
	inset: 0;
	border-radius: 2px;
	z-index: -1;
}
.indicator .stamp * {
	display: inline-block;
}

/* indicator (pitch accent pattern) */
#target-word-reading .indicator::after { border: none; }
#target-word-reading .indicator {
	position: relative;
	font-size: 80%;
	font-weight: bold;
}
#target-word-reading .indicator .content { margin: 1px 6px; }
#target-word-reading .indicator::before {
	border-radius: 6px;
	content: "";
	z-index: -1;
	position: absolute;
	inset: 0;
	opacity: var(--pitch-accent-opacity);
}

/* theme colors */
#target-word-reading .indicator,
.indicator .stamp { color: white; }
.indicator .stamp::before,
#target-word-reading .indicator::before { background-color: black; }
.night_mode #target-word-translation .indicator .stamp::before,
.night_mode #target-word-reading .indicator::before {
	background-color: white; opacity: calc(0.45 * var(--pitch-accent-opacity));
}

/* grey color in definitions */
#target-word-translation .indicator .stamp::before,
#target-word-translation .indicator > *:not(.stamp),
#target-word-translation .indicator::after { opacity: var(--indicator-opacity); }

/* collapse kanji with multiple writings */
#back .kanji {
	position: relative;
	display: inline-flex;
	flex-direction: row;
	--writing-padding: 4px;
	--writing-margin: 4px;
}
#back .kanji .extra-writings .extra-count {
	transition-property: opacity;
	transition-duration: var(--reading-expand-transition);
	opacity: 1;
	font-size: 75%;
	font-weight: bold;
	user-select: none;
}
#back .kanji .extra-writings {
	transition-property: padding, gap;
	gap: 0px;
	transition-duration: var(--reading-expand-transition);
	position: relative;
	padding: 0 1em;
	align-items: center;
	cursor: text;
}
#back .kanji .extra-writings::after {
	content: "";
	position: absolute;
	border-radius: 0.5em;
	background-color: currentColor;
	transition-property: width, height, opacity;
	transition-duration: var(--reading-expand-transition);
	opacity: 15%;
	top: 50%;
	left: 50%;
	height: 1em;
	width: 1.5em;
	transform: translate(-50%, -50%);
	z-index: -1;
}
/* ... */

